# stockpile

./: .gitignore  CMakeLists.txt  README.md  vcpkg.cmake
inc/: stockpile.h
src/: stockpile.c
test/: CMakeLists.txt  main.cpp
test/lib/: CMakeLists.txt
tools/: CMakeLists.txt
tools/warehouse/: CMakeLists.txt  main.cpp
tools/warehouse/forms/: mainwindow.cpp  mainwindow.hpp
